# sumeru

./: AGENTS.md  DEVPOST.md  README.md  components.json  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  docs.yml  release.yml
docs/: cli.md  endpoint.md  getting-started.md  index.md  marketplace.md  oauth.md
docs/.vitepress/: config.mjs
docs/cookbook/: add-stdio-mcp.md  connect-cursor.md  install-from-marketplace.md  oauth-without-dcr.md  rotate-token.md  run-at-startup.md
docs/cookbook/linux/: appimage-hyprland.md  appimage-wayland.md  install.md  run-at-startup.md
docs/cookbook/macos/: install.md  run-at-startup.md
scripts/: capture_docs_screenshots.mjs  mcp_test_client.py
src/: App.svelte  app.css  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  docs_server.rs  gateway.rs  lib.rs  linux_wayland.rs  main.rs  oauth.rs  pool.rs
src/components/: Docs.svelte  Editor.svelte  Endpoint.svelte  Marketplace.svelte  ProviderIcon.svelte  ServerList.svelte  Titlebar.svelte
src/lib/: api.js  docs.js  draft.js  marketplace-icons.js  marketplace.js  marketplace.json  marketplace.test.js  utils.js
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card-footer.svelte  card-header.svelte  card.svelte
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-header.svelte  dialog-overlay.svelte
src/lib/components/ui/input/: input.svelte
(+4 files in other folders)
