[package]
name = "funnelit"
version = "0.1.0"
description = "Local MCP funnel desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "funnelit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rmcp = { version = "2.2", features = [
  "client",
  "server",
  "macros",
  "schemars",
  "transport-io",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
  "transport-streamable-http-server",
  "reqwest",
] }
axum = "0.8"
tokio = { version = "1", features = ["net", "process", "sync", "time", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tokio-util = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "form"] }
keyring = { version = "4", features = ["v1"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
rand = "0.9"
thiserror = "2"
schemars = "1"
http = "1"
tower = "0.5"
tracing = "0.1"
sha2 = "0.11.0"
base64 = "0.22.1"
open = "5.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
# Match Tauri/gtk stack; used only to filter ayatana tray deprecation noise.
glib = "0.18"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
